@@ -587,8 +587,8 @@ class WCS_PayPal_Standard_IPN_Handler extends WC_Gateway_Paypal_IPN_Handler {
 	 * @since 1.0.0 - Migrated from WooCommerce Subscriptions v2.0
 	 */
 	public static function get_order_id_and_key( $args, $order_type = 'shop_order', $meta_key = '_paypal_subscription_id' ) {
-
-		$order_id = $order_key = '';
+		$order_id  = '';
+		$order_key = '';
 
 		if ( isset( $args['subscr_id'] ) ) { // PayPal Standard IPN message
 			$subscription_id = $args['subscr_id'];
@@ -600,32 +600,36 @@ class WCS_PayPal_Standard_IPN_Handler extends WC_Gateway_Paypal_IPN_Handler {
 
 		// First try and get the order ID by the subscription ID
 		if ( ! empty( $subscription_id ) ) {
+			$orders = wcs_get_orders_with_meta_query(
+				[
+					'limit'      => 1,
+					'orderby'    => 'ID',
+					'order'      => 'ASC',
+					'type'       => $order_type,
+					'status'     => 'any',
+					'meta_query' => [ // phpcs:ignore WordPress.DB.SlowDBQuery.slow_db_query_meta_query
+						[
+							'key'     => $meta_key,
+							'value'   => $subscription_id,
+							'compare' => '=',
+						],
+					],
+				]
+			);
 
-			$posts = get_posts( array(
-				'numberposts'      => 1,
-				'orderby'          => 'ID',
-				'order'            => 'ASC',
-				'meta_key'         => $meta_key,
-				'meta_value'       => $subscription_id,
-				'post_type'        => $order_type,
-				'post_status'      => 'any',
-				'suppress_filters' => true,
-			) );
-
-			if ( ! empty( $posts ) ) {
-				$order_id  = $posts[0]->ID;
-				$order_key = get_post_meta( $order_id, '_order_key', true );
+			if ( ! empty( $orders ) ) {
+				$order_id  = $orders[0]->get_id();
+				$order_key = $orders[0]->get_order_key();
 			}
 		}
 
 		// Couldn't find the order ID by subscr_id, so it's either not set on the order yet or the $args doesn't have a subscr_id (?!), either way, let's get it from the args
 		if ( empty( $order_id ) && isset( $args['custom'] ) ) {
-
 			$order_details = json_decode( $args['custom'] );
 
 			if ( is_object( $order_details ) ) { // WC 2.3.11+ converted the custom value to JSON, if we have an object, we've got valid JSON
 
-				if ( 'shop_order' == $order_type ) {
+				if ( 'shop_order' === $order_type ) {
 					$order_id  = $order_details->order_id;
 					$order_key = $order_details->order_key;
 				} elseif ( isset( $order_details->subscription_id ) ) {
@@ -638,8 +642,8 @@ class WCS_PayPal_Standard_IPN_Handler extends WC_Gateway_Paypal_IPN_Handler {
 
 					if ( ! empty( $subscriptions ) ) {
 						$subscription = array_pop( $subscriptions );
-						$order_id  = $subscription->get_id();
-						$order_key = $subscription->get_order_key();
+						$order_id     = $subscription->get_id();
+						$order_key    = $subscription->get_order_key();
 					}
 				}
 			} else { // WC < 2.3.11, we could have a variety of payloads, but something has gone wrong if we got to here as we should only be here on new purchases where the '_paypal_subscription_id' is not already set, so throw an exception
